# Smarti

./: .gitignore  CMakeLists.txt  Dockerfile
src/: main.cpp
training/: train.py
